--- a/slides/css/meetup.css
+++ b/slides/css/meetup.css
@@ -21,25 +21,32 @@ body {
         display: none;
     }
 
-    .reveal h2 {
-        text-shadow: 0 0 7px #fff,
+    .reveal {
+        h2 {
+            text-shadow: 0 0 7px #fff,
             0 0 10px #fff,
             0 0 21px #fff,
-            0 0 42px #1BC1E4,
-            0 0 82px #1BC1E4,
-            0 0 92px #1BC1E4,
-            0 0 102px #1BC1E4,
-            0 0 151px #1BC1E4;
+            0 0 42px #84c8d8,
+            0 0 82px #84c8d8,
+            0 0 92px #84c8d8,
+            0 0 102px #84c8d8,
+            0 0 151px #84c8d8;
+        }
+
+        ul {
+            list-style-type: none;
+        }
+
+        .progress {
+            color: #1BC1E4;
+            height: 7px;
+        }
 
     }
 
-
-    .reveal ul {
-        list-style-type: none;
-    }
 
     .slide-background.conclusion {
-        background: url("../images/openrewrite.svg") no-repeat 50% 15%;
+        background: no-repeat center/80% url("../images/conclusion.jpg");
     }
 
 
@@ -52,7 +59,13 @@ body {
 
 
     .transparency.slide-background.present {
-        opacity: 0.20;
+        opacity: 0.60;
+    }
+
+    .blur-border.slide-background.present {
+        div {
+            box-shadow: inset 0 0 10px 8px var(--r-background-color);
+        }
     }
 
     .big {
@@ -70,12 +83,6 @@ body {
 
     img {
         border-radius: 10px;
-    }
-
-
-    .reveal .progress {
-        color: #1BC1E4;
-        height: 7px;
     }
 
     .vertical-align-middle > p {
@@ -151,21 +158,17 @@ body {
         overflow: hidden;
     }
 
-    ol {
-        width: 40%;
-    }
-
     li {
         list-style-type: none;
     }
 
-    li:nth-child(even) {
-        text-align: right;
-    }
+    /*li:nth-child(even) {*/
+    /*    text-align: right;*/
+    /*}*/
 
-    li:nth-child(odd) {
-        text-align: left;
-    }
+    /*li:nth-child(odd) {*/
+    /*    text-align: left;*/
+    /*}*/
 
     audio {
         display: none;
