--- a/slides/css/meetup.css
+++ b/slides/css/meetup.css
@@ -17,11 +17,22 @@ body {
     }
 
 
-    h1 {
-        display: none;
-    }
+
 
     .reveal {
+        h1 {
+            /*display: none;*/
+
+            text-shadow: 0 0 7px #fff,
+            0 0 10px #fff,
+            0 0 21px #fff,
+            0 0 42px #84c8d8,
+            0 0 82px #84c8d8,
+            0 0 92px #84c8d8,
+            0 0 102px #84c8d8,
+            0 0 151px #84c8d8;
+        }
+
         h2 {
             text-shadow: 0 0 7px #fff,
             0 0 10px #fff,
@@ -172,21 +183,5 @@ body {
 
     audio {
         display: none;
-    }
-
-    @keyframes flicker {
-        0%, 18%, 22%, 25%, 53%, 57%, 100% {
-            text-shadow: 0 0 4px #fff,
-            0 0 11px #fff,
-            0 0 19px #fff,
-            0 0 40px #0fa,
-            0 0 80px #0fa,
-            0 0 90px #0fa,
-            0 0 100px #0fa,
-            0 0 150px #0fa;
-        }
-        20%, 24%, 55% {
-            text-shadow: none;
-        }
     }
 }
