Adapt to snowcamp

--- a/slides/css/meetup.css
+++ b/slides/css/meetup.css
@@ -49,7 +49,7 @@ body {
         }
 
         .progress {
-            color: #1BC1E4;
+            color: #241F35;
             height: 7px;
         }
 
