--- a/slides/css/meetup.css
+++ b/slides/css/meetup.css
@@ -16,7 +16,8 @@ body {
         width: 200px;
         height: 143px;
         background-image: url('../images/logo_event.png');
-        background-size: 200px 143px;
+        background-size: 169px 109px;
+        background-repeat: no-repeat;
     }
 
 
