pump my ice breaker

--- a/slides/css/meetup.css
+++ b/slides/css/meetup.css
@@ -16,7 +16,8 @@ body {
         width: 200px;
         height: 143px;
         background-image: url('../images/logo_event.png');
-        background-size: 200px 143px;
+        background-size: 70%;
+        background-repeat: no-repeat;
     }
 
 
@@ -37,7 +38,7 @@ body {
         }
 
         h2 {
-            text-shadow: -1px 0 #1BC1E4, 0 1px #1BC1E4, 1px 0 #1BC1E4, 0 -1px #1BC1E4;
+            text-shadow: -1px 0 #EEEEEE, 0 1px #EEEEEE, 1px 0 #EEEEEE, 0 -1px #EEEEEE;
         }
 
         ul {
@@ -144,26 +145,26 @@ body {
 
     .chercher_remplacer {
         position: fixed;
-        top: 36px;
-        left: 710px;
+        top: 125px;
+        left: 821px;
     }
 
     .regexp {
         position: fixed;
-        top: 36px;
-        left: 261px;
+        top: 125px;
+        left: 197px;
     }
 
     .llm {
         position: fixed;
         top: 355px;
-        left: 261px;
+        left: 197px;
     }
 
     .click_droit {
         position: fixed;
-        top: 335px;
-        left: 656px;
+        top: 355px;
+        left: 821px;
         overflow: hidden;
     }
 
