--- a/slides/css/meetup.css
+++ b/slides/css/meetup.css
@@ -6,11 +6,25 @@
     --r-main-color: #111012;
     --r-main-font: 'Poppins';
     --r-heading-color: #8FAADC;
-    --r-link-color: #8FAADC
+    --r-link-color: #8FAADC;
 }
 
-body:not(:has(.present.demo)):not(.title) {
-    & footer {
+body {
+    /* Footer styles for devfest-logo if body has .title */
+
+    &.title footer:has(.devfest-logo) {
+        z-index: 10;
+        position: absolute;
+        left: 35%;
+        bottom: 0;
+        min-height: 80px;
+        text-align: center;
+        width: 600px;
+    }
+
+    /* Footer styles for onepoint-logo if body does not have .present.demo or .title */
+
+    &:not(:has(.present.demo)):not(.title) footer:has(.onepoint-logo) {
         z-index: 10;
         position: absolute;
         left: 0;
@@ -19,35 +33,40 @@ body:not(:has(.present.demo)):not(.title) {
         min-height: 80px;
         text-align: center;
     }
-}
 
-body {
     .reveal {
         h1 {
             --r-heading1-size: 82px;
-            color: #FFFFFF;
+            color: #000000;
             position: fixed;
-            top: 123px;
             left: 28px;
             width: 100%;
             text-align: center;
-            text-shadow: -1px 0 #8FAADC, 0 1px #8FAADC, 1px 0 #8FAADC, 0 -1px #8FAADC;
+            /*text-shadow: -1px 0 #8FAADC, 0 1px #8FAADC, 1px 0 #8FAADC, 0 -1px #8FAADC;*/
         }
 
-        .title.present h2{
+        .title.present h2 {
             position: fixed;
             top: 208px;
             left: 630px;
             width: 100%;
             font-family: var(--r-heading-font);
             text-shadow: -1px 0 #000000, 0 1px #000000, 1px 0 #000000, 0 -1px #000000;
-            color: #8FAADC;
+            /*color: #8FAADC;*/
             text-transform: none;
+        }
+
+        .to-the-bottom {
+            position: absolute;
+            left: 50%;
+            bottom: 20px;
+            transform: translate(-50%, -50%);
+            margin: 0 auto;
         }
 
         h2 {
             --r-heading-color: #000000;
-            text-shadow: -1px 0 #8FAADC, 0 1px #8FAADC, 1px 0 #8FAADC, 0 -1px #8FAADC;
+            /*text-shadow: -1px 0 #8FAADC, 0 1px #8FAADC, 1px 0 #8FAADC, 0 -1px #8FAADC;*/
             position: fixed;
             left: 50%;
             top: 6px;
@@ -83,15 +102,8 @@ body {
         border-radius: 10px;
     }
 
-    .vertical-align-middle > p {
-        vertical-align: middle;
-    }
-
-    .vertical-align-middle > p > span {
-        vertical-align: middle;
-        margin: 0;
-    }
-
+    .vertical-align-middle > p,
+    .vertical-align-middle > p > span,
     .vertical-align-middle > p > span > img {
         vertical-align: middle;
         margin: 0;
@@ -160,5 +172,30 @@ body {
         position: fixed;
         bottom: 0;
         right: 0;
+    }
+
+    .easter-egg {
+        position: absolute;
+        right: 380px;
+        bottom: 110px;
+        animation: easteregg 5s ease 0s 1 normal forwards;
+    }
+
+    .easter-egg::after {
+        content: "#dobbycestlemeilleur";
+    }
+}
+
+@keyframes easteregg {
+    0% {
+        animation-timing-function: ease-in;
+        opacity: 0;
+        transform: scale(0) translateY(-45px) translateX(-80px) rotate(-75deg);
+    }
+
+    100% {
+        animation-timing-function: ease-out;
+        opacity: 1;
+        transform: scale(0.5) rotate(-25deg) translateY(0px) translateX(600px);
     }
 }
